# lamp

./: README.md  admin-edit.html  admin.html  cart.html  docker-compose.yaml  index.html  login.html  mypy.ini  pyproject.toml  settings.toml
admin_app/: main.py
admin_app/api/: __init__.py  auth.py
admin_app/core/: app.py  config.py  db.py
admin_app/database/: employees.py
admin_service/: Dockerfile  main.py  pyproject.toml  settings.toml
admin_service/api/: auth.py
admin_service/app/: main.py
admin_service/app/api/: __init__.py  auth.py  users.py
admin_service/app/core/: app.py  config.py  db.py  security.py
admin_service/app/database/: __init__.py  employees.py  users.py
admin_service/app/models/: __init__.py  employees.py  users.py
admin_service/app/schemas/: __init__.py  employees.py  users.py
admin_service/app/services/: __init__.py  employees.py  users.py
admin_service/core/: app.py  config.py  db.py  enums.py  security.py
admin_service/database/: base_crud.py  employees.py
admin_service/models/: employees.py  users.py
admin_service/schemas/: __init__.py  employees.py
admin_service/services/: __init__.py  employees.py  users.py
app/: main.py
app/api/: __init__.py  (+2 more)
frontend/: admin-edit.html  admin.html  cart.html  index.html  login.html  products.html
order_service/: Dockerfile  main.py  pyproject.toml  settings.toml
order_service/api/: products.py
order_service/app/: main.py
order_service/app/api/: __init__.py  orders.py
order_service/app/clients/: __init__.py  product_api.py  user_api.py
order_service/app/core/: app.py  config.py  db.py
order_service/app/database/: __init__.py  orders.py
order_service/app/models/: __init__.py  orders.py
order_service/app/schemas/: __init__.py  orders.py
order_service/app/services/: __init__.py  orders.py
order_service/core/: config.py  db.py  exceptions.py
order_service/database/: products.py  users.py
order_service/models/: __init__.py  orders_products.py  products.py
order_service/schemas/: __init__.py  orders.py  users.py
order_service/services/: __init__.py  orders.py  prodcuts.py
product_service/: Dockerfile  main.py  pyproject.toml  settings.toml
scripts/: app.js  initializer.js  modules.js
styles/: admin-style.css  main.css  reset.css
(+53 files in other folders)
