[project]
name = "order-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Yura Mishin",email = "robothot@yandex.ru"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
